--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,92 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.outer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 10;
+  margin: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.blue-bar {
+  width: 100%;
+  height: 20px;
+  position: absolute;
+  top: 0px; /* Ajusta esta propiedad según donde quieras posicionarlo dentro del contenedor */
+  left: 0;
+  background-color: blue; /* Solo para visualizar el div */
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.container {
+  border: 1px solid black;
+  padding: 5px;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 40%;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.containerCon{
+  border: 1px solid black;
+  padding: 5px;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: lightblue; /* Fondo azul claro */
+  color: white; /* Texto negro para contraste */
+  font-size: 1.5em; /* Tamaño de letra más grande */
 }
+
+.subContainer {
+  padding: 5px;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 2em
+}
+
+.textContainer{
+  border: 1px solid black;
+  padding: 5px;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 100%;
+  box-sizing: border-box;
+  text-align: left;
+}
+
+.formContainer {
+  background-color: white;
+  color: black;
+  font-size: 0.9em;
+  text-align: center; /* Cambiado a izquierda para alineación adecuada */
+}
+
+.formGroup {
+  margin-bottom: 25px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.formGroup label {
+  width: 40%;
+  margin-bottom: 0;
+  text-align: right;
+  padding-right: 10px;
+}
+
+.formGroup input, .formGroup select {
+  width: 40%;
+  padding: 5px;
+  margin-left: 15px;
+}
+
+.Check{
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+
