--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@
   text-align: center;
   width: 100%;
   box-sizing: border-box;
-  background-color: lightblue; /* Fondo azul claro */
+  background-color: rgb(106, 150, 247); /* Fondo azul claro */
   color: white; /* Texto negro para contraste */
   font-size: 1.5em; /* Tamaño de letra más grande */
 }
@@ -73,14 +73,15 @@
 }
 
 .formGroup label {
-  width: 40%;
+  width: 25%;
   margin-bottom: 0;
   text-align: right;
   padding-right: 10px;
+  font-size: 18px;
 }
 
 .formGroup input, .formGroup select {
-  width: 30%;
+  width: 18%;
   padding: 5px;
   margin-left: 15px;
 }
