--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
   padding: 5px;
   margin-bottom: 10px;
   text-align: center;
-  width: 65%;
+  width: 55%;
 }
 
 .containerCon{
@@ -75,11 +75,11 @@
 }
 
 .formGroup label {
-  width: 25%;
-  margin-bottom: 0;
+  width: 50%;
+  margin-bottom: 15px;
   text-align: right;
   padding-right: 10px;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .formGroup input, .formGroup select {
