--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
 }
 
 .container {
-  border: 1px solid black;
+  border: 1px solid gray;
   padding: 5px;
   margin-bottom: 10px;
   text-align: center;
@@ -26,8 +26,7 @@
 }
 
 .containerCon{
-  border: 1px solid black;
-  padding: 5px;
+  padding: 15px;
   margin-bottom: 20px;
   text-align: center;
   width: 100%;
@@ -47,9 +46,10 @@
 }
 
 .textContainer{
-  border: 1px solid black;
-  padding: 5px;
+  border: 2px solid gray;
+  padding: 10px;
   margin-bottom: 20px;
+  margin-top: 20px;
   text-align: center;
   width: 100%;
   box-sizing: border-box;
@@ -77,6 +77,7 @@
 .formGroup label {
   width: 50%;
   margin-bottom: 15px;
+  margin-top: 10px;
   text-align: right;
   padding-right: 10px;
   font-size: 15px;
@@ -86,6 +87,7 @@
   width: 18%;
   padding: 5px;
   margin-left: 15px;
+  margin-top: 13px;
 }
 
 .Checkfac{
@@ -122,5 +124,14 @@
   margin-left: 10px;
 }
 
+.ValidContainer{
+  padding: 0px;
+  margin-bottom: 5px;
+  text-align: center;
+  width: 100%;
+  text-align: left;
+  margin-left: 30px;
+  color: rgb(210, 70, 70);
+}
 
 
